Add some commands and general improvements